package database

import (
	"context"

	"github.com/Garvit-Jethwani/database-service/config"
	"github.com/Garvit-Jethwani/database-service/proto"
)

type DatabaseService struct {
	proto.UnimplementedDatabaseServiceServer
	// Database connections and configurations
}

func NewDatabaseService(cfg *config.Config) (*DatabaseService, error) {
	// Initialize database connections and configurations

	return &DatabaseService{
		// Set database connections and configurations
	}, nil
}

func (s *DatabaseService) ExecuteQuery(ctx context.Context, req *proto.QueryRequest) (*proto.QueryResponse, error) {
	// Implement the logic to execute a query on the specified database
	return nil, nil
}

func (s *DatabaseService) ExecuteCommand(ctx context.Context, req *proto.CommandRequest) (*proto.CommandResponse, error) {
	// Implement the logic to execute a command on the specified database
	return nil, nil
}
